fix: correct baseURL comments and formatting in api.service.js files feat: update product bids display logic to show message when no bids are present refactor: change article to anchor tag for product links in buildContainerProducts function style: adjust grid gap in search results styles

--- a/app/src/styles/products/assets/_search_results.css
+++ b/app/src/styles/products/assets/_search_results.css
@@ -25,7 +25,7 @@
   font-weight: 600;
 }
 
-.results__grid {
+.results__search {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 400px));
   gap: 1.5rem;
@@ -41,6 +41,7 @@
   border: 1px solid #ebe7e2;
 
   transition: 0.3s ease;
+  text-decoration: none;
 }
 
 .result__card:hover {
